<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="127dp"
                android:layout_height="220dp" >
    <FrameLayout
        android:id="@+id/list_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/list_item_icon"
            android:layout_gravity="top"
            android:layout_width="wrap_content"
            android:layout_height="180dp"/>

        <TextView
            android:id="@+id/list_item_name"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:layout_gravity="bottom"/>
    </FrameLayout>
</RelativeLayout>