<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/drawer_layout"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical">

<!-- The main content view -->
<!--fragment xmlns:android="http://schemas.android.com/apk/res/android"
          xmlns:tools="http://schemas.android.com/tools"
          android:id="@+id/movie_list_fragment"
          android:name="cz.muni.fi.pv256.movio2.uco_396546_themoviedb.MainFragment"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          tools:context="cz.muni.fi.pv256.movio2.uco_396546_themoviedb.MainActivity"
          tools:layout="@android:layout/list_content" /-->

    <FrameLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/movie_list_fragment"
        tools:layout="@android:layout/list_content">

    </FrameLayout>

<ListView android:id="@+id/left_drawer"
          android:layout_width="240dp"
          android:layout_height="match_parent"
          android:layout_gravity="start"
          android:choiceMode="singleChoice"
          android:divider="@android:color/transparent"
          android:dividerHeight="0dp"
          android:background="#111"/>

</android.support.v4.widget.DrawerLayout>