<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/movie_detail_fragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="cz.muni.fi.pv256.movio2.uco_396546_themoviedb.view.MovieDetailActivity" />
