<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <android.support.v7.widget.RecyclerView
        android:id="@+id/saved_movies_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <TextView
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:id="@+id/error_text"
        tools:text="No data"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="NO DATA"/>
</LinearLayout>